--- a/Spring/Photostagram/src/main/resources/templates/layout/boardLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/boardLayout.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Photostagram</title>
-  <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
+  <link rel="shortcut icon" th:href="@{/img/favicon.png}" type="image/png">
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"/>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
