--- a/Spring/Photostagram/src/main/resources/static/css/aside.css
+++ b/Spring/Photostagram/src/main/resources/static/css/aside.css
@@ -1069,19 +1069,40 @@ html {height: 100%;}
     background: #000000;
     padding:8px 12px;
     border-radius:8px;
-    max-width:50px;
     z-index:18;
-    width: 100%;
+    width: auto;
     height: 34px;
     display: block;
 }
 
-.tag1 > div > span{
-    color:white;
-}
-
 .tag1 > div > button{
     border:none;
+    color:white;
+    background: none;
+    margin-left: 8px;
+    font-size: 20px;
+    /* text-align: center; */
+    line-height: 10px;
+}
+
+.tag1 > div:nth-child(1){
+    clip-path: path( 'M8 0C8 4 9.32406e-08 7.819 1.25211e-07 10.5C1.57188e-07 13.1815 8 17.0005 8 21L8 0Z' );
+    width:21px;
+    height:21px;
+    transform: rotate(90deg);
+    top: -8px;
+    position:absolute;
+    background:#000000;
+}
+
+.username{
+    display:flex;
+    width:auto;
+}
+
+.username > span{
+    width:fit-content;
+    display:inline-block;
     color:white;
 }
 /********** post Modal ************/
