--- a/Spring/Photostagram/src/main/resources/templates/board/quest.html
+++ b/Spring/Photostagram/src/main/resources/templates/board/quest.html
@@ -1,37 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout/profileLayout}">
+      layout:decorate="~{layout/boardLayout}">
 <th:block layout:fragment="main">
     <main>
-        <div class="questList">
-            <th:block th:if="${#maps.isEmpty(sortMap)}">
-                <h1>게시물이 없습니다.</h1>
-            </th:block>
-            <th:block th:unless="${#maps.isEmpty(sortMap)}">
-                <th:block th:each="m:${sortMap}">
-                    <div class="pic">
-                        <a th:href="@{/board/post (no=${m.value.no})}">
-                            <th:block th:if="${#strings.endsWith(m.value.firstThumb, '.mp4')} == true">
-                                <video th:src="|@{/}thumb/${m.value.firstThumb}"></video>
-                                <i class="fa-solid fa-film fa-2x faIcons"></i>
-                            </th:block>
-                            <th:block th:unless="${#strings.endsWith(m.value.firstThumb, '.mp4')} == true">
-                                <img th:src="|@{/}thumb/${m.value.firstThumb}">
-                                <th:block th:if="${m.value.thumbs > 1}">
-                                    <i class="fa-solid fa-images fa-2x faIcons"></i>
-                                </th:block>
-                                <th:block th:unless="${m.value.thumbs > 1}">
-                                </th:block>
-                            </th:block>
-                        </a>
-                        <div class="picOver" th:onclick="|window.open('@{/board/post (no=${m.value.no})}')|">
-                            <div><i class="fa-solid fa-heart fa-2x picOverI" style="color: #f0f4f9;"></i><span class="picOverSpan">[[${m.value.like}]]</span></div>
-                            <div><i class="fa-solid fa-comment fa-2x picOverI" style="color: #f0f4f9;"></i><span class="picOverSpan">[[${m.value.commentCount}]]</span></div>
-                        </div>
-                    </div>
-                </th:block>
-            </th:block>
+        <div class="pic">
+            <a href="#">
+                    <video src="#"></video>
+                    <i class="fa-solid fa-film fa-2x faIcons"></i>
+                    <img src="#">
+                        <i class="fa-solid fa-images fa-2x faIcons"></i>
+            </a>
+            <div class="picOver">
+                <div><i class="fa-solid fa-heart fa-2x picOverI" style="color: #f0f4f9;"></i><span class="picOverSpan"></span></div>
+                <div><i class="fa-solid fa-comment fa-2x picOverI" style="color: #f0f4f9;"></i><span class="picOverSpan"></span></div>
+            </div>
         </div>
     </main>
 </th:block>
