2023/04/10 myPage like, comment, posts 일부 구현 완료

--- a/Spring/Photostagram/src/main/resources/templates/fragments/_aside.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_aside.html
@@ -426,6 +426,9 @@
         <div class="more_logout">
             <a th:href="@{/member/logout}">로그아웃</a>
         </div>
+        <div class="more_my">
+            <a th:href="@{/my/interaction/like}">내 활동</a>
+        </div>
     </th:block>
 
 </html>
