--- a/Spring/Photostagram/src/main/resources/templates/layout/myLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/myLayout.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" th:href="@{/css/aside.css}" />
   <link rel="stylesheet" th:href="@{/css/myPage.css}"/>
   <script th:src="@{/js/aside.js}"></script>
+  <script th:src="@{/js/myModal.js}"></script>
 </head>
   <body>
     <main>
