--- a/Spring/Photostagram/src/main/resources/templates/my/photos/posts.html
+++ b/Spring/Photostagram/src/main/resources/templates/my/photos/posts.html
@@ -10,8 +10,8 @@
 <th:block layout:fragment="main">
     <div id="myActivity">
         <div>
-            <a th:href="@{/my/interaction/posts}">게시물</a>
-            <a href="#">릴스</a>
+            <a th:href="@{/my/photos/posts}">게시물</a>
+            <a>릴스</a>
         </div>
         <div>
             <div class="activityTop">
@@ -28,17 +28,55 @@
                     <th:block th:unless="${#strings.endsWith(m.value.firstThumb, '.mp4')} == true">
                         <img th:src="|@{/}thumb/${m.value.firstThumb}">
                     </th:block>
-                        <input type="checkbox" th:id="${m.value.firstThumb}" th:data-value="${m.value.no}">
+                        <input name="photo" type="checkbox" onclick="getCheckedCnt()" th:id="${m.value.firstThumb}" th:data-value="${m.value.no}">
                         <label th:for="${m.value.firstThumb}"></label>
                     </a>
                 </th:block>
             </div>
         </div>
+        <div class="activityPop" style="display: none;">
+            <span class="closePop">X</span>
+            <h1><span id="deleteCount">0</span>개 선택됨</h1>
+            <button class="mySortDelete">삭제</button>
+        </div>
     </div>
 </th:block>
 </html>
 <script>
-    $('.mySortSelect').click(function(){
+    $(function(){
+        const labels = $("label");
+        $('.mySortSelect').on('click', function(){
+            if (labels.hasClass("myCheckOff")){
+                labels.removeClass("myCheckOff");
+                labels.addClass("myCheckOn");
+                $(".activityPop").show();
+            } else {
+                labels.removeClass("myCheckOn");
+                labels.addClass("myCheckOff");
+                $("input[name=photo]").prop("checked", false);
+                $("#deleteCount").text("0");
+                $(".activityPop").hide();
+            }
+        });
+    });
+
+    function getCheckedCnt(){
+      // 선택된 목록 가져오기
+          const query = 'input[name="photo"]:checked';
+          const selectedElements =
+              document.querySelectorAll(query);
+
+      // 선택된 목록의 갯수 세기
+      const selectedElementsCnt =
+            selectedElements.length;
+
+      // 출력
+      document.getElementById('deleteCount').innerText
+        = selectedElementsCnt;
+    }
+</script>
+<script>
+    $('.mySortDelete').click(function(){
         let checkArray = [];
         let length = $('input:checked').length;
         //console.log ($('input:checked').length);
@@ -58,7 +96,11 @@
             success: function(data){
                 console.log("success");
                 console.log(data.result);
-                $("input[type=checkbox]:checked").hide();
+                $("input[type=checkbox]:checked").parent().remove();
+                $("input[type=checkbox]:checked").remove();
+                $("label").removeClass("myCheckOn");
+                $("label").addClass("myCheckOff");
+                $(".activityPop").hide();
                 alert('정상적으로 삭제되었습니다.');
             }
         });
