--- a/Spring/Photostagram/src/main/resources/static/css/aside.css
+++ b/Spring/Photostagram/src/main/resources/static/css/aside.css
@@ -1832,4 +1832,30 @@ div.post-menu div.wrapper button:nth-child(2) {
   font-weight: bold;
 }
 
+/* myPage */
+.more_my {
+    width: 230px;
+    height: 44px;
+    background: #f2f2f2;
+    box-sizing: border-box;
+    z-index: 10;
+    position: fixed;
+    bottom: 150px;
+    left: 15px;
+    border-radius: 5px;
+    display: none;
+    }
+
+.more_my.on {
+    display: block;
+    }
+
+.more_my > a {
+    display: block;
+    text-align: center;
+    width: 230px;
+    height: 44px;
+    font-size: 15px;
+    line-height: 44px;
+}
 
