--- a/Spring/Photostagram/src/main/resources/static/css/myPage.css
+++ b/Spring/Photostagram/src/main/resources/static/css/myPage.css
@@ -86,7 +86,7 @@
     }
 
     #mySelect > div:nth-child(2) {border-top: 1px solid #e9e9e9;}
-    #mySelect > div:nth-child(2), div:nth-child(3), div:nth-child(4) {height: 100px; margin-bottom: 10px;}
+    #mySelect > .selectMenu {height: 100px; margin-bottom: 10px;}
 
     #mySelect > div > a {
         /* width: 100%; */
@@ -169,15 +169,35 @@
         height: 100%;
     }
 
+    .activityContents > a > input[type="checkbox"] + label {
+        top: -30px;
+        left: 100px;
+     }
+     .activityContents > a > input[type="checkbox"]:checked + label {
+        top: -30px;
+        left: 100px;
+     }
+
+    .replyContent > input[type="checkbox"] + label {
+        float: right;
+        right: 25px;
+        vertical-align: middle;
+        top: -30px;
+    }
+    .replyContent > input[type="checkbox"]:checked + label {
+        float: right;
+        right: 25px;
+        vertical-align: middle;
+        top: -30px;
+    }
+
+
     input[type="checkbox"] {display: none;}
     input[type="checkbox"] + label {
         width: 20px;
         height: 20px;
-        display: block;
         position: relative;
         border-radius: 70%;
-        top: -30px;
-        left: 100px;
         background-image: url("../img/check_none.png");
         background-size: cover;
     }
@@ -186,8 +206,251 @@
         text-align: center;
         position: relative;
         border-radius: 70%;
-        top: -30px;
-        left: 100px;
         background-image: url("../img/check_click.png");
         background-size: cover;
     }
+
+    .activityBox {
+        margin-bottom : 20px;
+    }
+
+    .activityBox > .oriContent {
+        display: block;
+        width: 750px;
+        height: 60px;
+    }
+    .activityBox > .oriContent > div {float: left;}
+    .activityBox > .oriContent > div:nth-child(1) {
+        width: 50px;
+        height: 50px;
+        border-radius: 70%;
+        overflow: hidden;
+    }
+    .activityBox > .oriContent > div:nth-child(2) {
+        margin-left: 10px;
+        width: 600px;
+        display: inline-block;
+
+    }
+    .activityBox > .oriContent > div > img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .activityBox > .oriContent > div > h3 {
+        font-size: 14px;
+        text-overflow: ellipsis;
+        max-height: 55px;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3;
+        overflow: hidden;
+    }
+    .activityBox > .oriContent > div > h3 > p {
+        font-size: 14px;
+        display: inline-block;
+        font-weight: bold;
+    }
+    .activityBox > .oriContent > img {
+        float: right;
+        width: 55px;
+        height: 55px;
+    }
+    .activityBox > .oriContent > video {
+        float: right;
+        width: 55px;
+        height: 55px;
+    }
+    .activityBox > .oriContent > span {
+        display: block;
+        color: #888;
+        width: 20px;
+        margin-left: 60px;
+    }
+    .activityBox > .replyContent {
+        margin-left: 60px;
+        margin-top: 10px;
+    }
+    .activityBox > .replyContent > div {float: left;}
+
+    .activityBox > .replyContent > div:nth-child(1) {
+       width: 40px;
+       height: 40px;
+       border-radius: 70%;
+       overflow: hidden;
+    }
+    .activityBox > .replyContent > div:nth-child(2) {
+        margin-left: 10px;
+        width: 550px;
+        display: inline-block;
+
+    }
+    .activityBox > .replyContent > div > img {
+        width: 100%;
+        height: 100%;
+    }
+    .activityBox > .replyContent > div > h3 {
+        font-size: 14px;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 1;
+        overflow: hidden;
+    }
+    .activityBox > .replyContent > div > h3 > p {
+       font-size: 14px;
+       display: inline-block;
+       font-weight: bold;
+    }
+    .activityBox > .replyContent > span {
+        display: block;
+        color: #888;
+        width: 20px;
+        margin-left: 50px;
+    }
+
+    .myCheckOn {display: block;}
+    .myCheckOff {display: none;}
+    .activityPop {
+        top: -30px;
+        width: 100%;
+        height: 30px;
+        background-color: white;
+        border-top: 1px solid #e9e9e9;
+        border-bottom: 1px solid #e9e9e9;
+    }
+    .activityPop > span {
+        float: left;
+        display: block;
+        width: 15px;
+        font-size: 15px;
+        /* font-weight: bold; */
+        margin-left: 10px;
+        line-height: 30px;
+    }
+    .activityPop > h1 {
+       float: left;
+       display: block;
+       width: 100px;
+       font-size: 16px;
+       margin-left: 15px;
+       line-height: 30px;
+    }
+    .activityPop > h1 > span {font-size: 16px; font-weight: bold; line-height: 30px;}
+    .activityPop > button {
+        float: right;
+        border:none;
+        background: none;
+        font-size: 15px;
+        color: red;
+        margin-right: 20px;
+        line-height: 30px;
+    }
+    .moreRe {
+        font-size: 14px;
+        top: 10px;
+        position: relative;
+        right: 35px;
+    }
+
+    .myModalClass {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        background-color: rgba(0,0,0,0.4);
+        -ms-overflow-style: none;
+      }
+      .myModalClass::-webkit-scrollbar {display: none;}
+
+      .myModalContents {
+        background-color: #fefefe;
+        margin: 15% auto;
+        border: 1px solid #888;
+        width: 400px;
+        border-radius: 10px;
+        height: 400px;
+        display: block;
+      }
+
+      .myModalContents > #myModalTop {
+        width: 397px;
+        position: relative;
+        text-align: center;
+        height: 50px;
+        border-bottom: 1px solid #e9e9e9;
+        line-height: 50px;
+        font-size: 18px;
+        font-weight: bold;
+      }
+
+      .myModalContents > #myModalMiddle {
+        height: 290px;
+        display: block;
+      }
+      .myModalContents > #myModalMiddle > div {height: 80px;}
+
+      .myModalContents > #myModalMiddle > div > h2 {
+        font-size: 16px;
+        color: #888;
+        margin-left: 10px;
+        margin-top: 10px;
+      }
+      .myModalContents > #myModalMiddle > div > div {
+        float: left;
+        border-radius: 10px;
+        background: #f2f2f2;
+        margin-top: 10px;
+        width: 70px;
+        height: 40px;
+        text-align: center;
+        vertical-align: middle;
+        line-height: 40px;
+        margin-left: 20px;
+      }
+      .myModalContents > #myModalMiddle > div > div:hover {cursor: pointer;}
+      .myModalContents > #myModalMiddle > div > .buttonOn {
+        background: #e5f0f9;
+        color: #4b9ae4;
+      }
+
+      .myModalContents > #myModalBottom {
+        border-top: 1px solid #e9e9e9;
+        width: 397px;
+        height: 50px;
+      }
+
+      .myModalContents > #myModalBottom > button {
+        width: 300px;
+        height: 30px;
+        background: #32a4ff;
+        color: white;
+        margin-left: 50px;
+        margin-top: 10px;
+        border: none;
+        border-radius: 10px;
+        text-align: center;
+        vertical-align: middle;
+        font-size: 15px;
+      }
+
+      .myModalClose {
+        color: #aaa;
+        float: left;
+        font-size: 40px;
+        margin-left: 10px;
+        margin-top: 5px;
+      }
+
+      #myModalMiddle > div > select {
+        margin-left: 20px;
+        margin-top: 10px;
+        height: 35px;
+        width: 60px;
+        border: 1px solid #e9e9e9;
+        color: #888;
+      }
