--- a/Spring/Photostagram/src/main/resources/templates/fragments/my/_modal.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/my/_modal.html
@@ -98,5 +98,81 @@
 
         </div>
     </div>
+    <div id="myModalId" class="myModalClass">
+        <div class="myModalContents">
+            <div id="myModalTop">
+                <span class="myModalClose">&times;</span>
+                정렬 및 필터
+            </div>
+            <div id="myModalMiddle">
+                <div>
+                    <h2>정렬 기준</h2>
+                    <div class="buttonOn">최신순</div>
+                    <div>오래된 순</div>
+                </div>
+                <div>
+                    <h2>시작 날짜</h2>
+                    <select name="year">
+                        <option>2016</option>
+                        <option>2017</option>
+                        <option>2018</option>
+                        <option>2019</option>
+                        <option>2020</option>
+                        <option>2021</option>
+                        <option>2022</option>
+                        <option>2023</option>
+                    </select>
+                    <select name="month">
+                        <option>1월</option>
+                        <option>2월</option>
+                        <option>3월</option>
+                        <option>4월</option>
+                        <option>5월</option>
+                        <option>6월</option>
+                        <option>7월</option>
+                        <option>8월</option>
+                        <option>9월</option>
+                        <option>10월</option>
+                        <option>11월</option>
+                        <option>12월</option>
+                    </select>
+                    <select name="day">
+                    </select>
+                </div>
+                <div>
+                    <h2>종료 날짜</h2>
+                    <select name="year">
+                        <option>2016</option>
+                        <option>2017</option>
+                        <option>2018</option>
+                        <option>2019</option>
+                        <option>2020</option>
+                        <option>2021</option>
+                        <option>2022</option>
+                        <option>2023</option>
+                    </select>
+                    <select name="month">
+                        <option>1월</option>
+                        <option>2월</option>
+                        <option>3월</option>
+                        <option>4월</option>
+                        <option>5월</option>
+                        <option>6월</option>
+                        <option>7월</option>
+                        <option>8월</option>
+                        <option>9월</option>
+                        <option>10월</option>
+                        <option>11월</option>
+                        <option>12월</option>
+                    </select>
+                    <select name="day">
+                    </select>
+                </div>
+            </div>
+            <div id="myModalBottom">
+                <button>적용</button>
+            </div>
+        </div>
+    </div>
 </th:block>
 </html>
