--- a/Spring/Photostagram/src/main/resources/templates/fragments/my/_side.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/my/_side.html
@@ -5,21 +5,21 @@
       <div>내 활동</div>
       <th:block th:switch="${cate}">
         <th:block th:case="interaction">
-          <div class="currentMenu">
+          <div class="selectMenu currentMenu">
             <a th:href="@{/my/interaction/like}" class="currentSet">
               <i class="fa-solid fa-arrow-right-arrow-left fa-lg"></i>
               반응
               <p>좋아요, 댓글 및 회원님의 기타 반응을 검토하고 삭제합니다.</p>
             </a>
           </div>
-          <div>
+          <div class="selectMenu">
             <a th:href="@{/my/photos/posts}">
               <i class="fa-solid fa-photo-film fa-lg"></i>
               사진 및 동영상
               <p>공유한 사진과 동영상을 보거나 보관하거나 삭제합니다.</p>
             </a>
           </div>
-          <div>
+          <div class="selectMenu">
             <a th:href="@{/my/history}">
               <i class="fa-regular fa-calendar-days fa-lg"></i>
               계정 내역
@@ -28,21 +28,21 @@
           </div>
         </th:block>
         <th:block th:case="photos">
-          <div>
+          <div class="selectMenu">
             <a th:href="@{/my/interaction/like}">
               <i class="fa-solid fa-arrow-right-arrow-left fa-lg"></i>
               반응
               <p>좋아요, 댓글 및 회원님의 기타 반응을 검토하고 삭제합니다.</p>
             </a>
           </div>
-          <div class="currentMenu">
+          <div class="selectMenu currentMenu">
             <a th:href="@{/my/photos/posts}" class="currentSet">
               <i class="fa-solid fa-photo-film fa-lg"></i>
               사진 및 동영상
               <p>공유한 사진과 동영상을 보거나 보관하거나 삭제합니다.</p>
             </a>
           </div>
-          <div>
+          <div class="selectMenu">
             <a th:href="@{/my/history}">
               <i class="fa-regular fa-calendar-days fa-lg"></i>
               계정 내역
@@ -51,21 +51,21 @@
           </div>
         </th:block>
         <th:block th:case="history">
-          <div>
+          <div class="selectMenu">
             <a th:href="@{/my/interaction/like}">
               <i class="fa-solid fa-arrow-right-arrow-left fa-lg"></i>
               반응
               <p>좋아요, 댓글 및 회원님의 기타 반응을 검토하고 삭제합니다.</p>
             </a>
           </div>
-          <div>
+          <div class="selectMenu">
             <a th:href="@{/my/photos/posts}">
               <i class="fa-solid fa-photo-film fa-lg"></i>
               사진 및 동영상
               <p>공유한 사진과 동영상을 보거나 보관하거나 삭제합니다.</p>
             </a>
           </div>
-          <div class="currentMenu">
+          <div class="selectMenu currentMenu">
             <a th:href="@{/my/history}" class="currentSet">
               <i class="fa-regular fa-calendar-days fa-lg"></i>
               계정 내역
