--- a/Spring/Photostagram/src/main/resources/templates/board/post.html
+++ b/Spring/Photostagram/src/main/resources/templates/board/post.html
@@ -115,7 +115,7 @@
                             <a id="postFollow" href="#">팔로우</a>
                         </p>
                     </div>
-                    <a href="#">...</a>
+                    <a th:href="@{#}" class="postSelect">...</a>
                 </nav>
                 <ul>
                     <!-- 게시글 작성 콘텐츠 내용&해시태그-->
